--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "node": ">=4"
   },
   "scripts": {
-    "lint": "eslint .",
     "start": "node .",
-    "posttest": "npm run lint && nsp check"
+    "posttest": "node_modules/.bin/mocha -u exports test/**/*"
   },
   "dependencies": {
     "compression": "^1.0.3",
@@ -24,6 +23,7 @@
     "chai": "^4.1.2",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
+    "jenkins-mocha": "^5.0.0",
     "mocha": "^3.5.0",
     "nsp": "^2.1.0",
     "supertest": "^3.0.0"
@@ -32,10 +32,9 @@
     "type": "",
     "url": ""
   },
-  "scripts" : {
-      "start": "node .",
-      "posttest" : "node_modules/.bin/mocha -u exports test/**/*"
-    },
+  "scripts": {
+      "devtest": "jenkins-mocha --cobertura test/*"
+  },
   "license": "UNLICENSED",
   "description": "hello-world"
 }
