--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chai": "^4.1.2",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
+    "jenkins-mocha": "^5.0.0",
     "mocha": "^3.5.0",
     "nsp": "^2.1.0",
     "supertest": "^3.0.0"
