--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "automated testing",
+  "name": "hello-world",
   "version": "1.0.0",
   "main": "node .",
   "engines": {
-    "node": ">=4"
+    "node": ">=4",
+    "npm": "*"
   },
 
   "dependencies": {
@@ -24,10 +25,6 @@
     "nsp": "^2.1.0",
     "supertest": "^3.0.0"
   },
-  "engine": {
-    "node": "*",
-    "npm": "*"
-  },
   "scripts": {
     "start": "node .",
     "test": "IP=0.0.0.0 PORT=3000 mocha --timeout 5000 tests/*_test.js"
@@ -37,5 +34,5 @@
     "url": "https://github.com/natesol-code21/rest-node.git"
   },
   "license": "UNLICENSED",
-  "description": "automated testing"
+  "description": "hello-world"
 }
